src/objects/CBCube__c.object
<CustomObject>
    <fields>
        <fullName>AccSubType__c</fullName>
        <formula>CBAccount__r.CBSubAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLA Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccType__c</fullName>
        <formula>CBAccount__r.CBAccountType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>CBAccount__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>CBDivision__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBKey__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBPeriod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>CBPeriod__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBScenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Scenario</label>
        <referenceTo>CBScenario__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CB_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>CBVariable1__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CBCubes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>CBVariable2__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CBCubes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>CBVariable3__c</referenceTo>
        <relationshipLabel>CB Cubes</relationshipLabel>
        <relationshipName>CBCubes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>CBPeriod__r.Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diff__c</fullName>
        <formula>Budget__c -  Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DrillDownIds__c</fullName>
        <inlineHelpText>List of Ids related to Cube</inlineHelpText>
        <label>Drill Down Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sign__c</fullName>
        <formula>TEXT(CBAccount__r.CBAccountType__r.Sign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign</label>
        <type>Text</type>
    </fields>
    <label>CB Cube</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBAccount__c</columns>
        <columns>CBPeriod__c</columns>
        <columns>Actual__c</columns>
        <columns>Budget__c</columns>
        <columns>CBDivision__c</columns>
        <columns>CBVariable1__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBCube Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Cubes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>